confirm global language preferences

--- a/lexiflux/templates/language-preferences.html
+++ b/lexiflux/templates/language-preferences.html
@@ -30,22 +30,14 @@
                                 </optgroup>
                             </select>
                         </div>
-                        <button
-                           class="btn btn-sm"
-                           @click="setGlobalPreferences"
-                           id="setGlobalPreferencesBtn"
-                           :class="{
-                              'btn-outline-danger border-2': !buttonAnimating,
-                              'btn-danger border-0 shadow-lg bounce': buttonAnimating
-                           }">
-                           <span :class="{'d-none': buttonAnimating}">Use these preferences for all languages</span>
-                           <span :class="{'d-none': !buttonAnimating}">
-                               <i class="bi bi-check2-circle me-2"></i>Apply to all languages
-                           </span>
-                        </button>
-                        <small class="text-muted d-block mt-1">
-                            This will override and clear existing preferences for all other languages.
-                        </small>
+                        <div class="d-flex flex-column align-items-start">
+                            <button
+                               class="btn btn-sm btn-outline-danger border-2"
+                               @click="showGlobalPreferencesConfirm"
+                               id="setGlobalPreferencesBtn">
+                               Use for all languages
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -152,6 +144,7 @@
     </div>
 
     {% include 'partials/lexical_artical_modal.html' %}
+    {% include 'partials/confirm_global_language_preferences_modal.html' %}
 
     <!-- Delete Confirmation Modal -->
     <div class="modal fade" id="deleteConfirmModal" tabindex="-1" aria-labelledby="deleteConfirmModalLabel" aria-hidden="true" ref="deleteConfirmModal">
