--- a/lexiflux/templates/partials/book_modal.html
+++ b/lexiflux/templates/partials/book_modal.html
@@ -110,9 +110,16 @@
             {% if require_delete_confirmation %}
             <button type="button" class="btn btn-outline-secondary me-2" data-bs-dismiss="modal">Close</button>
             {% endif %}
+            {% if require_delete_confirmation %}
             <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">
               <i class="bi bi-check-lg me-1"></i>Save
             </button>
+            {% else %}
+            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal"
+                    onclick="window.location.href='{% url 'reader' %}?book-code={{ book.code }}'">
+              <i class="bi bi-book me-1"></i>Open
+            </button>
+            {% endif %}
           </div>
         </div>
       </form>
